[gd_scene load_steps=50 format=3 uid="uid://c6lchxmek3any"]

[ext_resource type="Script" uid="uid://biumaho1mi0ur" path="res://main.gd" id="1_1u8w0"]
[ext_resource type="Script" uid="uid://dbb0m3gh8pibb" path="res://ui.gd" id="1_d13ii"]
[ext_resource type="Texture2D" uid="uid://bhvn4rn0edj0l" path="res://img/orig_big.png" id="1_ig7tw"]
[ext_resource type="FontFile" uid="uid://bsrpeobn76stw" path="res://PixelifySans-VariableFont_wght.ttf" id="1_ryguw"]
[ext_resource type="Script" uid="uid://cqxlqcy4y4nmo" path="res://player.gd" id="3_cegan"]
[ext_resource type="Script" uid="uid://bjpa0rowlu7mx" path="res://background.gd" id="3_h2yge"]
[ext_resource type="Texture2D" uid="uid://dovqhlpw7407t" path="res://img/char_idle/idle_0.png" id="3_w48qg"]
[ext_resource type="Texture2D" uid="uid://p4okt0x35bt4" path="res://img/char_idle/idle_1.png" id="4_vivmo"]
[ext_resource type="Texture2D" uid="uid://dx55wuj805s76" path="res://img/char_idle/idle_2.png" id="5_2cqfq"]
[ext_resource type="Texture2D" uid="uid://dlsub3i4telvw" path="res://img/char_idle/idle_3.png" id="6_yaehf"]
[ext_resource type="Texture2D" uid="uid://dxa6fpjhdd04k" path="res://img/char_idle/idle_4.png" id="7_074og"]
[ext_resource type="Texture2D" uid="uid://bhqbdti1edtuy" path="res://img/char_idle/idle_5.png" id="8_cegan"]
[ext_resource type="Texture2D" uid="uid://cnurhev754q26" path="res://img/char_idle/idle_6.png" id="9_82xsv"]
[ext_resource type="Texture2D" uid="uid://chthcfafur8nv" path="res://img/char_idle/idle_7.png" id="10_getpj"]
[ext_resource type="Texture2D" uid="uid://m5btq38vgc3b" path="res://img/char_idle/idle_8.png" id="11_ryguw"]
[ext_resource type="Texture2D" uid="uid://cw7bubakunvwf" path="res://img/char_idle/idle_9.png" id="12_d13ii"]
[ext_resource type="Texture2D" uid="uid://dyxeqsxvs4twb" path="res://img/char_idle/idle_10.png" id="13_1u8w0"]
[ext_resource type="Texture2D" uid="uid://dklc885qt1j3p" path="res://img/char_idle/idle_11.png" id="14_0odxb"]
[ext_resource type="Texture2D" uid="uid://dyy5plwwwirmc" path="res://img/jump.png" id="15_074og"]
[ext_resource type="Texture2D" uid="uid://c6riu8uo3e771" path="res://img/landing.png" id="16_cegan"]
[ext_resource type="Texture2D" uid="uid://bmqatubddw7xv" path="res://img/char_midair/midair_0.png" id="17_82xsv"]
[ext_resource type="Texture2D" uid="uid://bocdg1b3naupy" path="res://img/char_midair/midair_1.png" id="18_getpj"]
[ext_resource type="Script" uid="uid://fjkyie7j6hxs" path="res://train.gd" id="20_getpj"]
[ext_resource type="PackedScene" uid="uid://nqfl0x6pal6f" path="res://Wagon.tscn" id="21_getpj"]
[ext_resource type="AudioStream" uid="uid://dxsqook10nm17" path="res://sounds/charging_jump.ogg" id="23_jq2sk"]
[ext_resource type="AudioStream" uid="uid://tlhswi01gcul" path="res://sounds/cartoon_jump.ogg" id="24_4k2k6"]
[ext_resource type="Script" uid="uid://c10scfg7bjumk" path="res://game_over.gd" id="25_0odxb"]
[ext_resource type="PackedScene" uid="uid://c71kal3lrowvt" path="res://obstacle_tv.tscn" id="25_kq58d"]
[ext_resource type="Texture2D" uid="uid://xc63ssblf5j4" path="res://img/jump_button.png" id="26_lswn8"]
[ext_resource type="PackedScene" uid="uid://deunaoy5wmbn8" path="res://obstacle_pec.tscn" id="26_seu75"]
[ext_resource type="PackedScene" uid="uid://dtl565i0i5mbl" path="res://obstacle_ch.tscn" id="27_htxhm"]
[ext_resource type="PackedScene" uid="uid://dung0xbr6lxnp" path="res://obstacle_stul.tscn" id="28_jq2sk"]
[ext_resource type="AudioStream" uid="uid://drqvifxds25bj" path="res://sounds/railway.ogg" id="31_seu75"]
[ext_resource type="PackedScene" uid="uid://c7fy4ba4s1ti8" path="res://Banana.tscn" id="32_ban"]
[ext_resource type="Texture2D" uid="uid://csnhnjduld8wu" path="res://img/itemy/banana.png" id="33_icon"]

[sub_resource type="Curve" id="Curve_getpj"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_ryguw"]
_data = [Vector2(0.00531916, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="SpriteFrames" id="SpriteFrames_lswn8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_w48qg")
}, {
"duration": 1.0,
"texture": ExtResource("4_vivmo")
}, {
"duration": 1.0,
"texture": ExtResource("5_2cqfq")
}, {
"duration": 1.0,
"texture": ExtResource("6_yaehf")
}, {
"duration": 1.0,
"texture": ExtResource("7_074og")
}, {
"duration": 1.0,
"texture": ExtResource("8_cegan")
}, {
"duration": 1.0,
"texture": ExtResource("9_82xsv")
}, {
"duration": 1.0,
"texture": ExtResource("10_getpj")
}, {
"duration": 1.0,
"texture": ExtResource("11_ryguw")
}, {
"duration": 1.0,
"texture": ExtResource("12_d13ii")
}, {
"duration": 1.0,
"texture": ExtResource("13_1u8w0")
}, {
"duration": 1.0,
"texture": ExtResource("14_0odxb")
}],
"loop": true,
"name": &"char_idle",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_074og")
}],
"loop": false,
"name": &"char_jump",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_cegan")
}],
"loop": false,
"name": &"char_landing",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_82xsv")
}, {
"duration": 1.0,
"texture": ExtResource("18_getpj")
}],
"loop": true,
"name": &"char_midair",
"speed": 9.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_074og"]
size = Vector2(20, 36)

[sub_resource type="Theme" id="Theme_0odxb"]
default_font = ExtResource("1_ryguw")
default_font_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_0odxb"]
font = ExtResource("1_ryguw")
font_size = 27
shadow_size = 6
shadow_color = Color(0, 0, 0, 0.203922)

[sub_resource type="LabelSettings" id="LabelSettings_lswn8"]
font = ExtResource("1_ryguw")
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.309804)

[sub_resource type="LabelSettings" id="LabelSettings_a6jrf"]
font = ExtResource("1_ryguw")
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.298039)

[sub_resource type="LabelSettings" id="LabelSettings_xuqvo"]
font = ExtResource("1_ryguw")
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.243137)

[sub_resource type="Animation" id="Animation_a6jrf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_lswn8"]
resource_name = "blesk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.21, 0.41),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../GameOver")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.166667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"do_restart"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xuqvo"]
_data = {
&"RESET": SubResource("Animation_a6jrf"),
&"blesk": SubResource("Animation_lswn8")
}

[sub_resource type="LabelSettings" id="LabelSettings_d13ii"]
font = ExtResource("1_ryguw")
font_size = 79
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.556863)
shadow_offset = Vector2(4.815, 2.665)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6jrf"]
size = Vector2(900, 900)

[node name="Main" type="Node2D"]
script = ExtResource("1_1u8w0")

[node name="Background" type="Node2D" parent="."]
script = ExtResource("3_h2yge")

[node name="bg1" type="Sprite2D" parent="Background"]
texture = ExtResource("1_ig7tw")
centered = false

[node name="bg2" type="Sprite2D" parent="Background"]
texture = ExtResource("1_ig7tw")
centered = false

[node name="Player" type="CharacterBody2D" parent="."]
scale = Vector2(2, 2)
script = ExtResource("3_cegan")
jump_curve = SubResource("Curve_getpj")
transition_curve = SubResource("Curve_ryguw")
train = NodePath("../Train")
background = NodePath("../Background")
ui = NodePath("../UI")
gameover = NodePath("../GameOver")
parallax_speed_air = 700.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
position = Vector2(324.5, 155.5)
sprite_frames = SubResource("SpriteFrames_lswn8")
animation = &"char_idle"
frame_progress = 0.821805

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(324, 154.5)
shape = SubResource("RectangleShape2D_074og")

[node name="ChargeSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("23_jq2sk")
volume_db = -7.172

[node name="JumpSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("24_4k2k6")

[node name="BananaSound" type="AudioStreamPlayer" parent="Player"]

[node name="Train" type="Node2D" parent="."]
script = ExtResource("20_getpj")
wagon_scene = ExtResource("21_getpj")
obstacle_scenes = Array[PackedScene]([ExtResource("25_kq58d"), ExtResource("26_seu75"), ExtResource("27_htxhm"), ExtResource("28_jq2sk")])
banana_scene = ExtResource("32_ban")

[node name="GameOver" type="CanvasLayer" parent="."]
offset = Vector2(-200, -100)
scale = Vector2(1.3, 1.3)
transform = Transform2D(1.3, 0, 0, 1.3, -200, -100)
script = ExtResource("25_0odxb")
transition_player_path = NodePath("../TransitionPlayer")

[node name="ColorRect" type="ColorRect" parent="GameOver"]
offset_right = 1282.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.560784)

[node name="CenterContainer" type="CenterContainer" parent="GameOver/ColorRect"]
layout_mode = 0
offset_right = 1284.0
offset_bottom = 718.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/ColorRect/CenterContainer"]
layout_mode = 2
theme = SubResource("Theme_0odxb")

[node name="fbro" type="Label" parent="GameOver/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "F bro"
label_settings = SubResource("LabelSettings_0odxb")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="GameOver/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "You've jumped: "
label_settings = SubResource("LabelSettings_lswn8")

[node name="HBoxContainer" type="HBoxContainer" parent="GameOver/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameOver/ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Nickname:"
label_settings = SubResource("LabelSettings_a6jrf")

[node name="LineEdit" type="LineEdit" parent="GameOver/ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="GameOver/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "S&VE TH1S"

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="GameOver/ColorRect/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "BEST RUNS:"
label_settings = SubResource("LabelSettings_xuqvo")
horizontal_alignment = 1

[node name="Label4" type="Label" parent="GameOver/ColorRect/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_xuqvo")
horizontal_alignment = 1

[node name="Label5" type="Label" parent="GameOver/ColorRect/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_xuqvo")
horizontal_alignment = 1

[node name="Label6" type="Label" parent="GameOver/ColorRect/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_xuqvo")
horizontal_alignment = 1

[node name="restart" type="Button" parent="GameOver/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="TransitionPlayer" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 1290.0
offset_bottom = 726.0

[node name="TransitionPlayer" type="AnimationPlayer" parent="TransitionPlayer"]
libraries = {
&"": SubResource("AnimationLibrary_xuqvo")
}

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("1_d13ii")

[node name="ScoreLabel" type="Label" parent="UI"]
offset_right = 1279.0
offset_bottom = 115.0
text = "0.00m"
label_settings = SubResource("LabelSettings_d13ii")
horizontal_alignment = 1
language = "cs"

[node name="BananaLabel" type="Label" parent="UI"]
offset_right = 1188.0
offset_bottom = 107.0
text = "0"
label_settings = SubResource("LabelSettings_d13ii")
horizontal_alignment = 2

[node name="Sprite2D" type="Sprite2D" parent="UI"]
position = Vector2(1234, 49)
scale = Vector2(0.0744629, 0.0744629)
texture = ExtResource("33_icon")

[node name="AchievementPopup" type="Button" parent="UI"]
visible = false
offset_left = 490.0
offset_top = 320.0
offset_right = 790.0
offset_bottom = 360.0
disabled = true
text = "ACHIEVEMENT"

[node name="AchievementPopup2" type="Button" parent="UI"]
visible = false
offset_left = 490.0
offset_top = 320.0
offset_right = 790.0
offset_bottom = 360.0
disabled = true
text = "ACHIEVEMENT"

[node name="AchievementSound" type="AudioStreamPlayer" parent="UI"]

[node name="MobileUI" type="CanvasLayer" parent="."]

[node name="JumpButton" type="TouchScreenButton" parent="MobileUI"]
position = Vector2(1039, 542)
scale = Vector2(0.133789, 0.119141)
texture_normal = ExtResource("26_lswn8")
shape = SubResource("RectangleShape2D_a6jrf")
action = "ui_accept"
visibility_mode = 1

[node name="TrainLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("31_seu75")
autoplay = true
